# Orchestra-TPRM

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  acme_live_verdict.json  alembic.ini  deal_memo.json  deploy.sh  dev.ps1  ma_verdict.json  output.json  pyproject.toml
.github/workflows/: ci.yml  cloud-run.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-m-a-due-diligence-mode-enhancement/: 01-04-SUMMARY.md  01-05-SUMMARY.md  01-06-SUMMARY.md  01-07-SUMMARY.md  01-09-SUMMARY.md
.superpowers/brainstorm/3542-1779048188/content/: a-financial-dark.html  b2-black-white.html  bc-combined.html  finance-tech-palette.html  google-ai-ecosystem.html  layout-b-variants.html  layout-structure.html  reject-font-compare.html  visual-direction.html
.superpowers/brainstorm/3542-1779048188/state/: server-info
dashboard/: UI-REVIEW.md  UI-SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: RemediationRoadmap.tsx  RiskScoreHero.tsx
docs/: developer.md
docs/api/: providers.md
docs/submission/: audit.md  cloud-run-url.txt  cover.html  form.md  slides.md  video-script.md
docs/superpowers/plans/: 2026-05-18-dashboard-redesign.md  2026-05-18-three-agents.md
docs/superpowers/specs/: 2026-05-16-hackathon-submission-design.md  2026-05-18-dashboard-redesign-design.md  2026-05-18-three-agents-delta-design.md
examples/: live.py
examples/tprm/acme/: links.txt  manifest.yaml  replay.jsonl
examples/tprm/hashicorp/: links.txt  manifest.yaml  replay.jsonl
infra/: cloudsql_bootstrap.sh
migrations/: env.py
migrations/versions/: 0001_initial_tprm_schema.py
scripts/: generate_narration.py  generate_narration_gtts.py  record_demo.mjs  synthesize_replays.py  test_adc.py  tprm_bootstrap_bq.py
src/orchestra/core/: agent.py  compiled.py  context.py  types.py
src/orchestra/providers/: __init__.py  _cli_common.py  _gemini_schema.py  gemini_cli.py  google.py  http.py  replay.py
src/orchestra/storage/: events.py
src/orchestra_tprm/: __init__.py  cli.py  graph.py  schemas.py
src/orchestra_tprm/adapters/: __init__.py  bigquery.py  docs.py  drive.py  gemini_files.py  github.py  protocols.py  sheets.py
src/orchestra_tprm/agents/: _uri.py  base.py  coordinator.py  intake.py  pmi_planner.py  policy.py  remediation.py  risk_score.py  router.py
src/orchestra_tprm/agents/specialists/: __init__.py  code.py  esg.py  external.py  financial.py  legal.py  saas_metrics.py  security.py
src/orchestra_tprm/bus/: event_bus.py
src/orchestra_tprm/embedding/: service.py
src/orchestra_tprm/modes/: config.py  coordinator_ma.tmpl  coordinator_vendor.tmpl  ma.yaml  vendor.yaml
src/orchestra_tprm/policies/: ma.yaml  vendor.yaml
src/orchestra_tprm/server/: app.py
src/orchestra_tprm/storage/: models.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/.claude/agent-memory/ui-specialist/: MEMORY.md  project_orchestra_dashboard_ui.md
terraform/.claude/agents/: ui-specialist.md
tests/: conftest.py
tests/live/: conftest.py  test_live_providers.py  test_vendor_acme.py
tests/tprm/: conftest.py
tests/tprm/integration/: conftest.py  test_ma_mode.py  test_vendor_mode.py
tests/tprm/invariants/: test_config_driven_coordinator.py  test_explicit_output_keys.py  test_no_mode_branches.py  test_no_streaming_with_tools.py  test_shared_specialists.py
tests/tprm/unit/: test_adapters.py  test_base_agent.py  test_cli_smoke.py  test_code_agent_oss_license.py  test_coordinator.py  test_coordinator_ma_sections.py  test_embedding_service.py  test_esg_agent.py  test_event_bus.py  test_finding_schema.py  test_intake_router.py  test_legal_agent.py  test_mode_config.py  test_pmi_planner_agent.py  test_policy_agent.py  test_policy_ic_memo.py  test_remediation_agent.py  test_replay_smoke.py  test_risk_score_agent.py  test_saas_metrics_agent.py  test_safe_specialist_concurrent.py  test_schemas_new_models.py  test_script_exhausted.py  test_security_agent.py  test_server.py  test_specialists.py  test_storage_models.py  test_tprm_state.py  test_vdr_gate.py
tests/unit/: test_deployment_config.py  test_doc_examples.py  test_providers.py
tests/unit/core/: test_message_attachments.py  test_parallel_context_isolation.py
tests/unit/providers/: test_gemini_cli_trust.py  test_gemini_schema.py  test_google_files_api.py  test_google_tool_name.py  test_safety_finish.py
